WIP: Removed per-org products and entity versioning
- Removed the versioning functionality associated with per-org
  products and content
- Moved API CRUD operations out of the /owners/{owner_key} namespace
- Updated refresh and removed emergency remappers